Fix ContractValidator issues and his Engine Test